lll-site.css
:root {
  --blue: #90AFC5;
  --blue2: #336B87;
  --black: #2A3132;
  --red: #763626;
  --red40: #763626CC;
  text-decoration: none;
}

/*body {
  background-attachment: fixed;
  background-position: 125% 100%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
  background-color: #ddd;
  /* border: 5px solid var(--red);
} */

.home_bg body {
  background-image: url("lll_cropped.png");
  background-attachment: fixed;
  background-position: 125% 100%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

.prof_bg body {
  background-image: url("lll_cropped.png");
  background-attachment: fixed;
  background-position: 125% 100%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

.llc_bg body {
  background-image: url("Leroy_OSU.png");
  background-attachment: fixed;
  background-position: 232% 100%;
  background-size: 85%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

.press_bg body {
  background-image: url("leroy_prof.png");
  background-attachment: fixed;
  background-position: 125% 100%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

a, a:-webkit-any-link {
  text-decoration: none;
  color: var(--blue);
}

.book_link a:hover {
  color: var(--blue2);
  text-decoration: underline;
}

.overlay {
  height: 100%;
  width: 100%;
  display: none;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(0, 0, 0);
  background-color: rgb(0, 0, 0, 0.9);
}

.overlay_content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}

.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
  color: #f1f1f1;
}

.overlay .closebtn {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
}

span {
  float: right;
}

@media screen and (max-height: 450px) {
  .overlay a {font-size: 20px}
  .overlay .closebtn {
    font-size 40px;
    top: 15px;
    right: 35px;
  }
}

.container {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr 1fr auto;
  grid-template-rows: 200px 1fr auto 50px;
  grid-template-areas:
    "name     name    name"
    "bio      bio     image"
    "footer   footer  image"
    ".        .        ."
}

.item1 {
  grid-area: name;
}

.item2 {

}

.item3 {
  grid-area: bio;
  max-width: 500px;
  font-size: 1.2em;
  font-family: serif;
}

.book_cover {
  border: solid 1px;
  width: 250px;
  height: 400px;
}
.llc_book_cover {
  border: solid 1px;
  width: 150px;
  height: 250px;
}

.item4 {
  display: none;
}

.footer {
  grid-area: footer;
}

h1 {
  font-size: 5em;
  color: var(--blue2);
  margin-bottom: 5px;
  margin-top: 0px;
}

h2 {
  margin-top: 0px;
  color: var(--red);
  box-shadow: inset 0 -10px 0 0 var(--blue);
  width: max-content;
}

img {
  height: auto;
  width: 100%;
}

.mobile_image {
  height: auto;
  width: 100%;
  border-radius: 50%;
}
.prof_mobile_image {
  height: 300px;
  width: auto;
  border-radius: 50%;
  place-self: center;
}

.link-card img {
  height: auto;
  width: auto;
  border-radius: 0%;
}

.donations {
  height: 200px;
}
.paypal {
  text-align: center;
}

.footer ul {
  list-style: none;
  margin-left: 0px;
  padding: 0px;
}
.footer ul li {
  float: left;
  padding-right: 10px;
  font-size: 0.8em;
}
.footer ul li a {
  text-decoration: none;
  text-transform: uppercase;
  color: var(--red);
  font-family: sans-serif;
}
.footer p {
  font-size: 0.8em;
  font-family: sans-serif;
}
.footer a:hover {
  color: var(--blue2);
}

/* SLIDESHOW STYLING */
#slideshow {
  margin: 50px auto;
  position: relative;
  /*width: 480px;*/
  height: 400px;
  padding: 10px;
  /*box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);*/
  overflow: hidden;
}

#slideshow > div {
  position: absolute;
  top: 10px;
  left: 10px;
  right: 10px;
  bottom: 10px;
}


/* PRESS PAGE LINK STYLING */
.web-link{
    color: #EE3233;
  }

.link-card{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin: 30px 0 30px 0;
    overflow: hidden;
}

.link-card-logo{
    width: 200px;
    text-align: center;
    padding: 0px 0px 0px 0px;
    float: left;
}

.link-card-link{
  	padding: 1px 75px 15px 15px;
    font-size: 15px;
    width: 100%;
}
.link-card-link a {
  text-decoration: none;
}
.link-card-link p {
  	color: #000;
    padding-right: 10px;
    margin-right: 10px;
}

.link-red {
    color: red;
}
/* COLLAPSIBLE for ALL MEDIA & PRESS */
button.collapsible::after {
  content: '\002B';
  color: var(--red);
  font-weight: bold;
  float: right;
  margin-left: 5px;
}
/* Style the button that is used to open and close the collapsible content */
.collapsible {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}
/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
  background-color: #ccc;
}
/* Style the collapsible content. Note: hidden by default */
.press_content, .infographics, .papers {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
}
/* @media (max-width: 600px) {
  .container {
    grid-template-rows: 1fr auto 1fr 1fr;
    grid-template-columns: 414px;
    grid-template-areas:
      "image"
      "name"
      "bio"
      "footer"
  }

  .home_bg body {
      background-image: url("");
    }
  .prof_bg body {
      background-image: url("");
    }
  .llc_bg body {
      background-image: url("");
    }
  .press_bg body {
      background-image: url("");
    }

  #slideshow {
    max-width: 400px;
    max-height: 400px;
  }
} */

@media (max-width: 768px) {
  .container {
    grid-template-rows: auto 200px auto;
    grid-template-areas:
      "image image"
      "name name"
      "bio bio"
      "footer footer"
    }

  .home_bg body {
      background-image: url("");
    }
  .prof_bg body {
      background-image: url("");
    }
  .llc_bg body {
      background-image: url("");
    }
  .press_bg body {
      background-image: url("");
    }

  h1 {
    font-size: 4em;
  }

  #slideshow {
    height: 293px;
  }

  #slideshow > div {

  }

  .item4 {
    display: grid;
    grid-area: image;
    height: 10%;
    width: auto;
  }
}

